# elements

./: .buildinfo  .gitignore  CHANGELOG.rst  GEMINI.md  README.rst  about.html  book-notes.html  changelog.html  comparison_report.txt  connect.html  design.html  extract_metadata.py  generate_rsts.py  genindex.html  glossary.html  index.html  intro.html  next_generation.md  objects.inv  organize_images.py  process_book.sh  py-modindex.html  pyproject.toml  quadrance.html  search.html  searchindex.js  todos.html  usage.html
.doctrees/: about.doctree  book-notes.doctree  changelog.doctree  connect.doctree  design.doctree  environment.pickle  glossary.doctree  index.doctree  intro.doctree  quadrance.doctree  todos.doctree  usage.doctree
_images/: graphviz-012678d19f8895e3ba9eed8d851c1ffb08f9c704.png.map  graphviz-0211a2eca34d52ab809cf96ddf60510f51e9acdb.png.map  graphviz-02fe76f80b7d932d4602dd8f8e3c3d760744f8ff.png.map  graphviz-051e764996db004fb7395aa184114352823b49c7.png.map  graphviz-098397e7a86de09e21e02390c9d4ab5b77f21d77.png.map  graphviz-0f2c9479c44624dd1ea414650e9734181b768c2a.png.map  graphviz-136e8343578e0ff66e6b469d9458a0b721b59988.png.map  graphviz-2202637542f4671f93adfe116450c7e9cd31a9ee.png.map  graphviz-23935cdb6a04a315d50db6b2fd03827c6ed356dc.png.map  graphviz-26f2921eca147d740bf6dd66a717cb51fb8c57ce.png.map  graphviz-28b34d7c1b8087133eb0dcdeed30b3220d500e3a.png.map  graphviz-29ccf0b37b9b7d14e8987a9723c3b81707d9d8f1.png.map  graphviz-2bde26d5ef11c89c9987493fc7bbba65b3cae3dc.png.map  graphviz-34885b6b3c3878383e9b39bb07356e891ca6fb40.png.map  graphviz-352ac2bbb5ad1e9a977861b2dfa2c877f3c1e93d.png.map  graphviz-352ce0fc18fd0b114c89ac9f94cf37099c9b178e.png.map  graphviz-35aa52572f11bd213851acf942ee428b5e60b2ff.png.map  graphviz-3939362d2d39b13d52c4ccf9061a0dd65bad6ab8.png.map  graphviz-3c2088ecb8b4d36f42e119c48c06e6a27273873b.png.map  graphviz-3d817640c7b600ba6bbba8534e2236cf2e2894d5.png.map  graphviz-4083cfa0f69a8c73a758aeb0a9874d2f412f6f70.png.map  graphviz-4aa6ac4cfe2ba062d4114277d163ba3aeb013860.png.map  graphviz-4e8a6d55d46e52171e90e8238177b527404b8a86.png.map  graphviz-4ea4a9b79ba75431ea0f175cdfa6efad6827adda.png.map  graphviz-5f6854a246db6a31263a6aa4f6914fb6fcd9b821.png.map  (+22 more)
_modules/: index.html
(+8168 files in other folders)
